Add Rest handlers

--- a/middleware/src/resources/keymapping.html
+++ b/middleware/src/resources/keymapping.html
@@ -6,7 +6,7 @@
   </head>
   <body>
   	<div class="maindiv">
-  		<div class="midalign"><button disabled> test </button></div>
+  		<h1 class="midalign">${hostname} game controller configuration</h1>
   		<div class="midalign"><button disabled> test </button></div>
   		${keyUi}
   	<div>
