--- a/database/app/header/sc.header.html
+++ b/database/app/header/sc.header.html
@@ -1,5 +1,5 @@
 <div id="top">
-    <nav class="navbar navbar-inverse navbar-static-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
             <header class="navbar-header">
                 <a class="navbar-brand" href="/" style="padding-top: 15px; padding-left: 15px; padding-right: 20px;">
@@ -28,12 +28,22 @@
                             CaDS
                         </a>
                     </li>
+                    <li>
+                        <a href="https://github.com/Transport-Protocol/SmartChair/wiki">
+                            Wiki
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/Transport-Protocol/SmartChair">
+                            Github
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="head">
-        <div class="main-bar">
+    <header class="head bg-light lter">
+        <div class="main-bar" style="margin-top: 52px;">
             <a href="http://www.scimbe.de">
                 <img border="0" alt="CaDS" align="center" src="../../images/logo.png" width="210" height="99">
             </a>
